# AskUSP

./: README.md  main.py  pyproject.toml
app/: main.py
app/models/: llm_client.py  synthesizer.py
config/: settings.py
database/: docker-compose.yaml
database/init/: 01-init.sql  02-init.sql  03-init.sql
database/upsert/: jornal-da-usp.py
docker/: docker-compose.yaml
docker/init-db/: 02-init.sql  03-init.sql
upsert/: jornal-da-usp.py  lib.py
